chore(main.css): add 'break-words' class to improve text wrapping in the blog-page section fix(NavBar.vue): change import statement for Article type to use 'type' keyword for better TypeScript support chore(package.json): update Nuxt version to 3.8.0 for compatibility and bug fixes fix([...slug].vue): change import statement for Article type to use 'type' keyword for better TypeScript support

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@
     }
 
     .blog-page {
-        @apply al-container text-secondary text-lg;
+        @apply al-container text-secondary text-lg break-words;
     }
 
     .blog-page h1,
